--- a/weitaixin/src/main/res/layout/activity_regist.xml
+++ b/weitaixin/src/main/res/layout/activity_regist.xml
@@ -1,17 +1,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white0"
-    android:orientation="vertical"
-    tools:context="cn.ihealthbaby.weitaixin.ui.RegistActivity">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/white0"
+              android:orientation="vertical"
+              tools:context="cn.ihealthbaby.weitaixin.ui.RegistActivity">
 
-    <include layout="@layout/layout_title" />
+    <include layout="@layout/layout_title"/>
 
     <EditText
         android:id="@+id/et_phone_number"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="53dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="30dp"
@@ -22,9 +22,9 @@
         android:padding="14dp"
         android:phoneNumber="true"
         android:singleLine="true"
-        android:textColorHint="@color/text_color_hint"
         android:textColor="@color/black1"
-        android:textSize="@dimen/font_normal" />
+        android:textColorHint="@color/text_color_hint"
+        android:textSize="@dimen/font_normal"/>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -37,18 +37,18 @@
         <EditText
             android:id="@+id/etPassword"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="53dp"
             android:layout_marginRight="60dp"
             android:background="@null"
             android:hint="请输入密码"
             android:inputType="textPassword"
             android:maxLength="20"
-            android:textColorHint="@color/text_color_hint"
             android:padding="14dp"
             android:password="true"
             android:singleLine="true"
             android:textColor="@color/black1"
-            android:textSize="@dimen/font_normal" />
+            android:textColorHint="@color/text_color_hint"
+            android:textSize="@dimen/font_normal"/>
 
         <CheckBox
             android:id="@+id/ivShowPassword"
@@ -57,7 +57,7 @@
             android:layout_gravity="right|center_vertical"
             android:layout_marginRight="20dp"
             android:background="@drawable/eye_selector"
-            android:button="@null" />
+            android:button="@null"/>
 
     </FrameLayout>
 
@@ -73,57 +73,56 @@
         <EditText
             android:id="@+id/et_mark_number"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="12dp"
+            android:layout_height="53dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:background="@drawable/frame_selector"
             android:hint="请输入验证码"
             android:maxLength="6"
             android:numeric="integer"
             android:padding="14dp"
-            android:textColorHint="@color/text_color_hint"
             android:singleLine="true"
             android:textColor="@color/black1"
-            android:textSize="@dimen/font_normal" />
+            android:textColorHint="@color/text_color_hint"
+            android:textSize="@dimen/font_normal"/>
 
         <TextView
             android:id="@+id/tv_mark_num_text"
             android:layout_width="130dp"
-            android:layout_height="wrap_content"
+            android:layout_height="53dp"
             android:layout_gravity="center_vertical"
             android:background="@drawable/shape_send_verifycode"
             android:gravity="center"
-            android:padding="14dp"
             android:singleLine="true"
             android:text="发送验证码"
             android:textColor="@color/button_login"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
-        <CheckBox
+        <ImageView
             android:id="@+id/iv_agree_register"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:background="@drawable/pitch_selector"
-            android:button="@null"
-            android:scaleType="fitXY" />
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/pitch"
+            android:scaleType="fitXY"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="8dp"
             android:singleLine="true"
             android:text="我已阅读并接受"
-            android:textSize="@dimen/font_normal14" />
+            android:textSize="@dimen/font_normal14"/>
 
         <TextView
             android:id="@+id/tvRuleRegister"
@@ -133,7 +132,7 @@
             android:singleLine="true"
             android:text="《微胎心注册条款》"
             android:textColor="@color/button_login"
-            android:textSize="@dimen/font_normal14" />
+            android:textSize="@dimen/font_normal14"/>
     </LinearLayout>
 
     <TextView
@@ -142,12 +141,12 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="102dp"
         android:background="@drawable/frame_regist_action_selector"
         android:gravity="center"
         android:padding="16dp"
         android:singleLine="true"
         android:text="确定"
         android:textColor="@drawable/text_color_selector"
-        android:textSize="@dimen/font_normal" />
+        android:textSize="@dimen/font_normal"/>
 </LinearLayout>
