--- a/weitaixin/src/main/res/layout/item_record.xml
+++ b/weitaixin/src/main/res/layout/item_record.xml
@@ -1,15 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#00FFFFFF"
-    android:orientation="horizontal">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="#00FFFFFF"
+              android:orientation="horizontal">
 
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="74dp">
-
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tvRecordDelete"
@@ -18,9 +17,9 @@
             android:layout_gravity="right|center_vertical"
             android:background="@color/red0"
             android:gravity="center"
-            android:textColor="@drawable/text_color_hei_selector"
             android:text="删 除"
-            android:textSize="@dimen/font20" />
+            android:textColor="@drawable/text_color_hei_selector"
+            android:textSize="@dimen/font18"/>
 
         <RelativeLayout
             android:id="@+id/rlRecordItem"
@@ -31,14 +30,15 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="74dp"
+                android:layout_marginLeft="9dp"
                 android:background="@drawable/recode_half_circle_bg">
 
                 <LinearLayout
                     android:id="@+id/ll_Layout"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="65dp"
+                    android:layout_height="65dp"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginLeft="10dp"
                     android:background="@drawable/record_circle"
                     android:gravity="center"
                     android:orientation="vertical">
@@ -48,14 +48,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/gray3"
-                        android:textSize="@dimen/font10" />
+                        android:textSize="@dimen/font10"/>
 
                     <TextView
                         android:id="@+id/tvCircleTime2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black1"
-                        android:textSize="@dimen/font18" />
+                        android:textSize="@dimen/font18"/>
                 </LinearLayout>
 
 
@@ -63,25 +63,25 @@
                     android:id="@+id/ivClock"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
-                    android:layout_alignTop="@id/ll_Layout"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginTop="18dp"
                     android:layout_toRightOf="@id/ll_Layout"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/record_clock" />
+                    android:src="@drawable/record_clock"/>
 
 
                 <TextView
                     android:id="@+id/tvTestTimeLong"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@id/ivClock"
-                    android:layout_alignTop="@id/ll_Layout"
                     android:layout_marginLeft="6dp"
+                    android:layout_marginTop="16dp"
                     android:layout_toRightOf="@id/ivClock"
+                    android:gravity="top"
                     android:singleLine="true"
+                    android:text="0秒"
                     android:textColor="@color/black0"
-                    android:textSize="@dimen/font18" />
+                    android:textSize="@dimen/font16"/>
 
 
                 <TextView
@@ -89,11 +89,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@id/ll_Layout"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginLeft="30dp"
                     android:layout_toRightOf="@id/ll_Layout"
                     android:singleLine="true"
+                    android:text="月日"
                     android:textColor="@color/gray3"
-                    android:textSize="@dimen/font_normal" />
+                    android:textSize="@dimen/font_normal"/>
 
                 <TextView
                     android:id="@+id/tvAdviceStatus"
@@ -104,7 +106,7 @@
                     android:background="@drawable/recode_half_circle"
                     android:gravity="center"
                     android:text="问医生"
-                    android:textColor="@drawable/text_color_selector" />
+                    android:textColor="@drawable/text_color_selector"/>
 
             </RelativeLayout>
         </RelativeLayout>
