--- a/weitaixin/src/main/res/layout/activity_monitor_play.xml
+++ b/weitaixin/src/main/res/layout/activity_monitor_play.xml
@@ -149,23 +149,23 @@
             >
 
             <TextView
-                android:id="@+id/tv_record"
+                android:id="@+id/tv_business"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
-                android:text="上传监测图"
+                android:text=""
                 android:textColor="@color/green0"
                 android:textSize="12sp"/>
 
             <ImageView
-                android:id="@+id/btn_start"
+                android:id="@+id/btn_business"
                 android:layout_width="88dp"
                 android:layout_height="88dp"
                 android:layout_above="@id/tv_record"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="10dp"
-                android:src="@drawable/button_upload"/>
+                />
         </RelativeLayout>
     </RelativeLayout>
 </RelativeLayout>
