--- a/weitaixin/src/main/res/layout/fragment_home_page.xml
+++ b/weitaixin/src/main/res/layout/fragment_home_page.xml
@@ -21,7 +21,7 @@
             android:layout_height="48dp"
             android:layout_centerVertical="true"
             android:layout_marginRight="4dp"
-            android:layout_toLeftOf="@id/ivHomeHeadImg"
+            android:layout_toLeftOf="@+id/ivHomeHeadImg"
             android:background="@drawable/home_head_age"
             android:gravity="center"
             android:text="31"
