--- a/weitaixinpro/src/main/res/layout/activity_monitor.xml
+++ b/weitaixinpro/src/main/res/layout/activity_monitor.xml
@@ -3,6 +3,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+    <include layout="@layout/layout_title"/>
+
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
