--- a/weitaixinpro/src/main/res/layout/activity_login.xml
+++ b/weitaixinpro/src/main/res/layout/activity_login.xml
@@ -38,7 +38,9 @@
         android:layout_below="@+id/rl_logo"
         android:layout_marginLeft="17dp"
         android:layout_marginRight="17dp"
-        android:listSelector="@color/white0"
+        android:cacheColorHint="#00000000"
+        android:fadingEdge="none"
+        android:listSelector="#00000000"
         android:scrollbars="none"/>
 
     <TextView
