--- a/weitaixinpro/src/main/res/layout/activity_monitor_play.xml
+++ b/weitaixinpro/src/main/res/layout/activity_monitor_play.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:scrollbars="none">
 
-            <cn.ihealthbaby.weitaixinpro.ui.widget.CurveMonitorDetialView
+            <cn.ihealthbaby.weitaixinpro.ui.widget.CurveMonitorPlayView
                 android:id="@+id/curve_play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
