--- a/weitaixin/src/main/res/layout/activity_reset_password.xml
+++ b/weitaixin/src/main/res/layout/activity_reset_password.xml
@@ -71,6 +71,7 @@
             android:background="@drawable/frame_selector"
             android:hint="请输入验证码"
             android:numeric="integer"
+            android:maxLength="6"
             android:padding="14dp"
             android:singleLine="true"
             android:textColor="@color/black1"
