--- a/weitaixin/src/main/res/layout/fragment_monitor.xml
+++ b/weitaixin/src/main/res/layout/fragment_monitor.xml
@@ -10,7 +10,7 @@
 
     <include
         android:id="@+id/head_title_id"
-        layout="@layout/layout_title" />
+        layout="@layout/layout_title"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="16dp"
             android:layout_marginTop="20dp"
-            android:src="@drawable/button_monitor_helper" />
+            android:src="@drawable/button_monitor_helper"/>
 
         <RelativeLayout
             android:layout_width="284dp"
@@ -37,20 +37,20 @@
                 android:id="@+id/roundScale"
                 android:layout_width="284dp"
                 android:layout_height="284dp"
-                android:layout_centerInParent="true" />
+                android:layout_centerInParent="true"/>
 
 
             <ImageView
                 android:id="@+id/round_background"
                 android:layout_width="262dp"
                 android:layout_height="262dp"
-                android:layout_centerInParent="true" />
+                android:layout_centerInParent="true"/>
 
             <ImageView
                 android:id="@+id/round_frontground"
                 android:layout_width="218dp"
                 android:layout_height="218dp"
-                android:layout_centerInParent="true" />
+                android:layout_centerInParent="true"/>
 
             <!--<cn.ihealthbaby.weitaixin.ui.wedget.RoundMaskView-->
             <!--android:id="@+id/round_progress_mask"-->
@@ -66,9 +66,23 @@
                 android:gravity="center"
                 android:includeFontPadding="false"
                 android:padding="0dp"
+                android:textColor="@color/green0"
+                android:textSize="38sp"
+
+                />
+
+            <TextView
+                android:id="@+id/tv_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:background="@color/white0"
+                android:gravity="center"
+                android:includeFontPadding="false"
+                android:padding="0dp"
                 android:text="start"
                 android:textColor="@color/green0"
-                android:textSize="58sp" />
+                android:textSize="58sp"/>
 
             <ImageView
                 android:id="@+id/bpm"
@@ -77,7 +91,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="66dp"
                 android:src="@drawable/bpm_dark"
-                android:visibility="gone" />
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/hint"
@@ -89,7 +103,7 @@
                 android:text="请耐心等待"
                 android:textColor="@color/gray1"
                 android:textSize="12sp"
-                android:visibility="gone" />
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/hint_animation"
@@ -101,7 +115,7 @@
                 android:text="..."
                 android:textColor="@color/gray1"
                 android:textSize="12sp"
-                android:visibility="gone" />
+                android:visibility="gone"/>
         </RelativeLayout>
 
         <RelativeLayout
@@ -122,7 +136,7 @@
                 android:layout_centerHorizontal="true"
                 android:text="立即开始"
                 android:textColor="@color/green0"
-                android:textSize="12sp" />
+                android:textSize="12sp"/>
 
             <ImageView
                 android:id="@+id/btn_start"
@@ -131,7 +145,7 @@
                 android:layout_above="@id/tv_record"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="10dp"
-                android:src="@drawable/button_start_record" />
+                android:src="@drawable/button_start_record"/>
         </RelativeLayout>
     </RelativeLayout>
 
