--- a/weitaixinpro/src/main/res/layout/fragment_monitor.xml
+++ b/weitaixinpro/src/main/res/layout/fragment_monitor.xml
@@ -25,8 +25,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="16dp"
             android:layout_marginTop="20dp"
-            android:src="@drawable/button_monitor_helper"
-            />
+            android:src="@drawable/button_monitor_helper" />
 
         <RelativeLayout
             android:layout_width="284dp"
@@ -38,23 +37,20 @@
                 android:id="@+id/roundScale"
                 android:layout_width="284dp"
                 android:layout_height="284dp"
-                android:layout_centerInParent="true"
-                />
+                android:layout_centerInParent="true" />
 
 
             <ImageView
                 android:id="@+id/round_background"
                 android:layout_width="262dp"
                 android:layout_height="262dp"
-                android:layout_centerInParent="true"
-                />
+                android:layout_centerInParent="true" />
 
             <ImageView
                 android:id="@+id/round_frontground"
                 android:layout_width="218dp"
                 android:layout_height="218dp"
-                android:layout_centerInParent="true"
-                />
+                android:layout_centerInParent="true" />
 
             <!--<cn.ihealthbaby.weitaixin.ui.wedget.RoundMaskView-->
             <!--android:id="@+id/round_progress_mask"-->
@@ -86,8 +82,7 @@
                 android:padding="0dp"
                 android:text="start"
                 android:textColor="@color/green0"
-                android:textSize="58sp"
-                />
+                android:textSize="58sp" />
 
             <ImageView
                 android:id="@+id/bpm"
