--- a/weitaixin/src/main/res/layout/activity_reset_password.xml
+++ b/weitaixin/src/main/res/layout/activity_reset_password.xml
@@ -36,6 +36,7 @@
             android:layout_marginRight="60dp"
             android:background="@null"
             android:hint="请输入新密码"
+            android:inputType="textPassword"
             android:padding="14dp"
             android:singleLine="true"
             android:textColor="@color/black1"
