--- a/weitaixinpro/src/main/res/layout/activity_login.xml
+++ b/weitaixinpro/src/main/res/layout/activity_login.xml
@@ -29,26 +29,32 @@
             android:textColor="@color/white0"/>
     </RelativeLayout>
 
-
-    <ListView
-        android:id="@+id/list"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/tv_login_action"
         android:layout_below="@+id/rl_logo"
-        android:layout_marginLeft="17dp"
-        android:layout_marginRight="17dp"
-        android:cacheColorHint="#00000000"
-        android:fadingEdge="none"
-        android:listSelector="#00000000"
-        android:scrollbars="none"/>
+        android:layout_marginLeft="18dp"
+        android:layout_marginRight="18dp">
+
+        <ListView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:cacheColorHint="#00000000"
+            android:fadingEdge="none"
+            android:listSelector="#00000000"
+            android:scrollbars="none"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView
-        android:id="@+id/tv_login_action"
+        android:id="@id/tv_login_action"
         android:layout_width="match_parent"
         android:layout_height="53dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="67dp"
+        android:layout_marginBottom="60dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/shape_green_button"
@@ -62,7 +68,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="35dp"
+        android:layout_marginBottom="30dp"
         android:gravity="center"
         android:text="本机device ID："/>
 
