--- a/bluetools/src/main/res/layout/activity_blue_data.xml
+++ b/bluetools/src/main/res/layout/activity_blue_data.xml
@@ -119,5 +119,11 @@
             android:text="不保存语音" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/reconnect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="重连"
+        />
 
 </LinearLayout>
